--- a/styles/Haceres.module.css
+++ b/styles/Haceres.module.css
@@ -4,7 +4,7 @@
 /* SECTION 1 */
 .section1 {
   height: 550px;
-  margin: 1rem 0 0 0;
+  margin: 1rem 0 10rem 0;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -12,7 +12,7 @@
   z-index: 1;
 }
 
-.section1:before {
+/*.section1:before {
   content: "";
   width: 100%;
   height: 550px;
@@ -21,39 +21,26 @@
     90deg,
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0.607) 60%
-  );*/
+  );
   background-image: radial-gradient(
     circle,
     rgba(0, 0, 0, 0.61) 10%,
     rgba(0, 0, 0, 0) 100%
   );
   z-index: 1;
+}*/
+
+.videoBackground {
+  z-index: 1; /* Place the video background behind other content */
+  overflow: hidden;
 }
 
-.imageS1 {
-  z-index: 0;
+.videoBackground video {
+  width: 100vw;
+  height: 100%;
+  object-fit: cover; /* Ensure the video covers the entire container */
 }
 
-.text1_a1_s1 {
-  color: rgb(255, 255, 255);
-  width: 50%;
-  text-align: center;
-  position: absolute;
-  display: flex;
-  flex-flow: column wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 3rem;
-  z-index: 1;
-}
-
-.text1_a1_s1 h2 {
-  font-size: 4rem;
-}
-
-.text1_a1_s1 p {
-  font-size: 1.5rem;
-}
 
 /* SECTION 2 */
 .publicaciones {
